--- a/themes/inhab/style.css
+++ b/themes/inhab/style.css
@@ -824,9 +824,6 @@ nav span.dashicons {
     bottom: 29px;
     right: 40px; }
 
-body {
-  min-width: 1120px; }
-
 footer {
   height: 350px; }
   footer p {
@@ -840,7 +837,11 @@ footer {
     height: 20px;
     width: auto; }
   footer a {
-    color: #ffffff; }
+    color: #ffffff;
+    text-decoration: none; }
+  footer a:hover {
+    color: white;
+    text-decoration: underline; }
 
 .footer-container {
   background-image: url("../../images/dark-wood@2x.png");
@@ -946,7 +947,7 @@ footer {
     text-transform: uppercase; }
   .site-content-contact .contact-container {
     text-align: left;
-    min-width: 980px; }
+    min-width: 880px; }
     .site-content-contact .contact-container h2.title {
       text-transform: uppercase;
       margin-left: 100px; }
@@ -964,16 +965,26 @@ footer {
     margin-top: 10px; }
 
 .sidebar-container {
-  text-align: start;
+  text-align: left;
   width: 320px;
   min-width: 320px;
-  padding-left: 30px;
+  padding-left: 50px;
   border-left: 1px solid #cacaca;
   display: block;
-  padding-top: 0; }
+  padding-top: 20px; }
+  .sidebar-container .tent-biz-hours-class, .sidebar-container .widget_archive {
+    position: relative;
+    bottom: 60px; }
+  .sidebar-container .div-of-week {
+    font-weight: bold; }
+  .sidebar-container .address {
+    position: relative;
+    left: 40px;
+    bottom: 20px; }
   .sidebar-container h2 {
     letter-spacing: 2px;
-    font-size: 1.5rem; }
+    font-size: 1.5rem;
+    color: #2f1339; }
   .sidebar-container a {
     color: #248A83;
     text-decoration: none; }
@@ -1056,7 +1067,7 @@ aside.widget_archive {
 
 .blog .site-main {
   padding-top: 40px;
-  width: 1120px; }
+  width: 890px; }
 
 .product-info {
   width: 100vw;
@@ -1260,6 +1271,7 @@ aside.widget_archive {
       width: 260px; }
     .post-type-archive .content-area .product-block .content-block {
       height: 55px;
+      max-width: 260px;
       font-size: 1rem;
       border: 1px solid #cacaca;
       border-top: 4px solid #cacaca;
@@ -1269,17 +1281,21 @@ aside.widget_archive {
       display: -webkit-box;
       display: -ms-flexbox;
       display: flex;
-      position: relative;
       -webkit-box-pack: justify;
           -ms-flex-pack: justify;
               justify-content: space-between; }
     .post-type-archive .content-area .product-block .price-meta {
-      background: white; }
+      background: white;
+      text-align: right;
+      z-index: 200; }
     .post-type-archive .content-area .product-block .archive-dots {
-      z-index: -1; }
+      z-index: 1;
+      right: 70px;
+      overflow: hidden; }
     .post-type-archive .content-area .product-block .archive-item {
-      position: relative;
-      background: white; }
+      white-space: nowrap;
+      background: white;
+      z-index: 200; }
 
 .single-product .site-content .site-main {
   padding-top: 50px;
@@ -1337,7 +1353,7 @@ aside.widget_archive {
 .tax-product-type h1 {
   font-weight: bold; }
 
-.tax-product-type p {
+.tax-product-type div.page-description p {
   text-align: center; }
 
 .tax-product-type span {
@@ -1415,10 +1431,27 @@ aside.widget_archive {
       position: relative;
       background: white; }
     .tax-product-type .product-wrapper .product-block .archive-dots {
-      z-index: -1; }
+      z-index: -1;
+      overflow: hidden; }
     .tax-product-type .product-wrapper .product-block .archive-item {
+      white-space: nowrap;
       position: relative;
       background: white; }
+
+.home .adventure-button {
+  text-transform: uppercase;
+  text-decoration: none;
+  color: white;
+  background-color: #248A83;
+  font-size: 19px;
+  font-family: "Novocento", sans-serif;
+  padding: 12px 24px 12px 24px;
+  position: relative;
+  bottom: 60px;
+  left: 40px; }
+
+.home .adventure-button:hover {
+  background-color: #19625d; }
 
 .home .adventure-wrapper {
   height: 560px;
@@ -1428,7 +1461,7 @@ aside.widget_archive {
   grid-template-rows: 1fr 1fr;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-gap: 20px 20px;
-  margin: 60px auto; }
+  margin: 60px auto 100px auto; }
   .home .adventure-wrapper a {
     font-family: "Merriweather", sans-serif;
     text-decoration: none;
@@ -1652,7 +1685,7 @@ aside.widget_archive {
     font-size: 16px; }
 
 .single-post .site-main {
-  width: 1020px; }
+  width: 890px; }
 
 .single-post .site-content {
   display: -webkit-box;
@@ -1703,7 +1736,7 @@ aside.widget_archive {
 
 .single-post .entry-content p {
   position: relative;
-  width: 810px;
+  width: 760px;
   height: auto;
   margin-left: 100px;
   margin-bottom: 30px;
